--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,9 @@ TYPEORM_PORT=
 TYPEORM_SYNCHRONIZE=
 TYPEORM_LOGGING=
 TYPEORM_ENTITIES=
+
+JWT_ACCESS_TOKEN_SECRET=
+JWT_ACCESS_TOKEN_EXPIRE=
+JWT_REFRESH_TOKEN_SECRET=
+JWT_REFRESH_TOKEN_EXPIRE=
+JWT_REFRESH_TOKEN_COOKIE_KEY=
