--- a/package.json
+++ b/package.json
@@ -17,22 +17,28 @@
   "author": "filipegeric",
   "license": "ISC",
   "dependencies": {
+    "argon2": "^0.25.1",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "log4js": "^4.3.1",
     "mysql": "^2.17.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.20"
   },
   "devDependencies": {
+    "@types/argon2": "^0.15.0",
     "@types/body-parser": "^1.17.0",
     "@types/chai": "^4.2.4",
+    "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.5",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.0",
     "@types/faker": "^4.1.7",
+    "@types/jsonwebtoken": "^8.3.5",
     "@types/mocha": "^5.2.7",
     "@types/mysql": "^2.15.8",
     "@types/node": "^12.0.7",
