Adds forgot password

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,13 @@ JWT_ACCESS_TOKEN_EXPIRE=
 JWT_REFRESH_TOKEN_SECRET=
 JWT_REFRESH_TOKEN_EXPIRE=
 JWT_REFRESH_TOKEN_COOKIE_KEY=
+
+PASSWORD_RESET_CODE_EXPIRE_IN_SECONDS=
+REDIS_PORT= 
+REDIS_HOST= 
+REDIS_PASSWORD=
+
+SMTP_HOST=
+SMTP_PORT= 
+SMTP_USER= 
+SMTP_PASSWORD= 
