--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.2.0",
+    "ioredis": "^4.14.1",
     "jsonwebtoken": "^8.5.1",
     "log4js": "^4.3.1",
     "mysql": "^2.17.1",
+    "nodemailer": "^6.3.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.20"
   },
@@ -39,10 +41,12 @@
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.0",
     "@types/faker": "^4.1.7",
+    "@types/ioredis": "^4.0.19",
     "@types/jsonwebtoken": "^8.3.5",
     "@types/mocha": "^5.2.7",
     "@types/mysql": "^2.15.8",
     "@types/node": "^12.0.7",
+    "@types/nodemailer": "^6.2.2",
     "@types/sinon": "^7.5.0",
     "chai": "^4.2.0",
     "faker": "^4.1.0",
