--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.2.0",
+    "google-auth-library": "^5.5.1",
     "ioredis": "^4.14.1",
     "jsonwebtoken": "^8.5.1",
     "log4js": "^4.3.1",
