--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "mysql": "^2.17.1",
     "nodemailer": "^6.3.1",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.20"
+    "typeorm": "^0.2.20",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@types/argon2": "^0.15.0",
@@ -49,6 +50,7 @@
     "@types/node": "^12.0.7",
     "@types/nodemailer": "^6.2.2",
     "@types/sinon": "^7.5.0",
+    "@types/uuid": "^3.4.6",
     "chai": "^4.2.0",
     "faker": "^4.1.0",
     "husky": "^3.0.9",
